glide (2002.04.10ds1-9) UNRELEASED; urgency=low

  * Remove package creation and maintainers history from debian/copyright.
  * Ignore error from db_unregister in case the template does not exist.
    (Closes: #708341)
  * Remove useless debian/BUGS file, these are tracked in the BTS.
  * Pass CPPFLAGS, CFLAGS and LDFLAGS to upstream build system.
  * Fix format string errors.
  * Debconf template translations:
    - Update Danish (Joe Dalton). (Closes: #708896)
    - Update Galician (Jorge Barreiro). (Closes: #708875)
    - Update Portuguese (Américo Monteiro). (Closes: #708736)
    - Update Russian. (Closes: #708440)
      Thanks to Sergey Alyoshin <alyoshin.s@gmail.com>.

 -- Guillem Jover <guillem@debian.org>  Wed, 15 May 2013 21:20:44 +0200

glide (2002.04.10ds1-8) unstable; urgency=low

  * Mark stack on assembler files as not executable.
  * Fix typos in source code spotted by lintian.
  * Do not include headers inside fxTime() function. Fixes build failure
    with gcc-4.8. (Closes: #701287)
  * Now using Standards-Version 3.9.4 (no changes needed).
  * Use correct package name in debconf db_subst call in libglide2 postinst.
  * Use translatable Descriptions in debconf templates.

 -- Guillem Jover <guillem@debian.org>  Tue, 14 May 2013 08:00:34 +0200

glide (2002.04.10ds1-7) unstable; urgency=low

  * Use “-fdollars-in-identifiers -x assembler-with-cpp” instead of “-$” to
    preprocess assembler code through gcc, the later just stopped working
    recently.

 -- Guillem Jover <guillem@debian.org>  Mon, 01 Aug 2011 05:13:22 +0200

glide (2002.04.10ds1-6) unstable; urgency=low

  * Add build-indep and build-arch targets (rename build to build-arch).
  * Update debconf template translations:
    - Danish. Thanks to Joe Dalton <joedalton2@yahoo.dk>. (Closes: #590001)
    - Dutch. Thanks to Jeroen Schot <schot@A-Eskwadraat.nl>. (Closes: #629391)
  * Now using Standards-Version 3.9.2 (no changes needed).
